--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 #banner{
-    background: url('http://localhost:3000/images/banner-1.jpg') no-repeat;
+    background: url('https://tourism-4bd36.web.app/images/banner-1.jpg') no-repeat;
     background-position: center bottom;
     background-size: cover;
     height: 800px;
